// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Templates Selector filters draft templates 1`] = `
Array [
  Object {
    "name": "Ape",
    "published": false,
  },
  Object {
    "name": "shared",
    "published": false,
    "shared_with_subaccounts": true,
  },
]
`;

exports[`Filter Templates Selector filters published templates 1`] = `
Array [
  Object {
    "name": "Zebra",
    "published": true,
    "subaccount_id": "1",
  },
]
`;

exports[`Filter Templates Selector filters subaccount all 1`] = `
Array [
  Object {
    "name": "shared",
    "published": false,
    "shared_with_subaccounts": true,
  },
]
`;

exports[`Filter Templates Selector filters subaccount assigned 1`] = `
Array [
  Object {
    "name": "Zebra",
    "published": true,
    "subaccount_id": "1",
  },
]
`;

exports[`Filter Templates Selector filters subaccount master 1`] = `
Array [
  Object {
    "name": "Ape",
    "published": false,
  },
]
`;

exports[`Filter Templates Selector returns searched list 1`] = `
Array [
  Object {
    "name": "Zebra",
    "published": true,
    "subaccount_id": "1",
  },
]
`;

exports[`Filter Templates Selector returns unfiltered list 1`] = `
Array [
  Object {
    "name": "Zebra",
    "published": true,
    "subaccount_id": "1",
  },
  Object {
    "name": "Ape",
    "published": false,
  },
  Object {
    "name": "shared",
    "published": false,
    "shared_with_subaccounts": true,
  },
]
`;

exports[`Templates by id Selector returns empty draft and published 1`] = `
Object {
  "draft": Object {},
  "published": Object {},
}
`;

exports[`Templates by id Selector returns template 1`] = `
Object {
  "name": "Ape",
}
`;
